syntax = "proto3";

package plugin;
option  go_package = "github.com/labulakalia/plugin_api/plugin;plugin";
import "plugin/wrappers.proto";

message AuthMethod {
    message FormData {
        message FormItem {
            string name = 1;
            oneof  Value {
                plugin.DoubleValue        double_value         = 2;
                plugin.Int64Value         int64_value          = 3;
                plugin.BoolValue          bool_value           = 4;
                plugin.StringValue        string_value         = 5;
                plugin.ObscureStringValue obscure_string_value = 6;
                plugin.DirPathValue       dir_path_value       = 7;
                plugin.FilePathValue      file_path_value      = 8;
            }
            repeated FormItem enum_values = 10;  // for dropdown widget
        }
        repeated FormItem form_items = 11;
    }

    message ScanQrcode {
        bytes  qrcode_image       = 1;  // qrcode image
        string qrcode_image_param = 2;  // qrcode image some param,like qrcode check key
        uint64 qrcode_expire_time = 3;  // qrcode expire time
    }

    message Callback {
        string callback_url       = 1;  // callback url
        string callback_url_param = 2;  // param for call back url
        string callback_url_data  = 3;  // url callback data
    }

    message Refresh {
        AuthData auth_data = 1;
    }

    oneof method {
        FormData   form_data   = 1;
        ScanQrcode scan_qrcode = 2;
        Callback   call_back   = 3;
        Refresh    refresh     = 4;
    }
}

message Auth {
    // form data input
    repeated AuthMethod auth_methods = 1;  //
}

message FileEntry {
    enum FileType {
        FileTypeUNSPECIFIED = 0;
        FileTypeDir         = 1;
        FileTypeFile        = 2;
        FileTypeLink        = 3;
    }
    string   name      = 1;
    FileType file_type = 2;
    uint64   size      = 3;
    bytes    raw_data  = 4;

    uint64 created_time  = 10;
    uint64 modified_time = 11;
    uint64 accessed_time = 12;
}

message DirEntry {
    repeated FileEntry file_entries = 1;

    string dir_entry_key = 10;
    uint64 max_page_size = 11;
}

message GetDirEntryRequest {
    string path = 1;
    uint64 page = 3;
    // if first req,page_size is 0,need return page_size on resp DirEntry
    uint64 page_size = 4;

    string    dir_entry_key = 10;  // dir entry key,may be help you to get multi page for one path
    FileEntry file_entry    = 11;
}

message GetFileResourceRequest {
    string file_path = 1;

    FileEntry file_entry = 10;
}

message FileResource {
    // video display VideoResolution
    enum Resolution {
        ResolutionUNSPECIFIED = 0;
        Original              = 1;  // Origin
        LD                    = 2;  // 360P high defintion
        SD                    = 3;  // 480P high defintion
        HD                    = 4;  // 720P high defintion
        FHD                   = 5;  // 1080P full high defintion
        QHD                   = 6;  // 2K  quad high defintion
        UHD                   = 7;  // 4K ultra high defintion
    }
    enum ResourceType {
        ResourceTypeUNSPECIFIED = 0;
        Video                   = 1;
        Subtitle                = 2;
        Audio                   = 3;
    }

    message FileResourceData {
        string              url           = 1;
        Resolution          resolution    = 2;
        uint64              expire_time   = 3;
        ResourceType        resource_type = 4;
        string              title         = 5;
        map<string, string> header        = 6;
    }
    repeated FileResourceData file_resource_data = 1;
}

message AuthData {
    bytes  auth_data_bytes        = 1;
    uint64 auth_data_expired_time = 2;
}

// oauth config
message OauthConfig {
    string          client_id     = 1;
    string          client_secret = 2;
    string          redirect_uri  = 3;
    repeated string scopes        = 4;
    string          auth_url      = 5;
    string          qrcode_url    = 6;

    string token_url = 10;
    // json POST application/json
    // form POST application/x-www-form-urlencoded
    // uri GET
    string token_req_type = 11;
}

message Token {
    string token_type    = 1;
    string access_token  = 2;
    string refresh_token = 3;
    uint64 expires_in    = 4;
}
